# pubmid-api

./: CHAT_TRANSCRIPT.md  README.md  REPORT.md  out.csv  pubmed_papers.ipynb  pyproject.toml  transcript.txt
pubmed_papers/: __init__.py  api.py  cli.py  core.py  models.py  output_uwu.csv
